Buttons and Theme to app added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".ForgotPassword" />
         <activity android:name=".PrivacyPolicy" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".ContactUsActivity"></activity>
     </application>
 
 </manifest>
