--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,9 @@ android {
 
 repositories {
     jcenter()
-    mavenCentral()
+    maven {
+        url "https://maven.google.com"
+    }
 }
 
 
@@ -41,11 +43,14 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
 
-    compile 'com.github.moondroid.coverflow:library:1.0'
-    compile 'com.android.support:cardview-v7:23.0.1'
+//    compile 'com.github.moondroid.coverflow:library:1.0'
+ //   compile 'com.android.support:cardview-v7:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.j256.ormlite:ormlite-core:4.48'
+
+   // compile 'com.google.android.gms:play-services-auth-api-phone:11.6.0'
+  //  compile 'com.google.android.gms:play-services-auth:11.6.0'
     testCompile 'junit:junit:4.12'
 }
