--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     buildToolsVersion "26.0.1"
     apply plugin: 'com.google.gms.google-services'
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.singular.barrister"
         minSdkVersion 15
         targetSdkVersion 26
@@ -12,6 +13,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
 
         release {
