--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,17 +47,19 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
-    compile 'com.facebook.android:account-kit-sdk:4.+'
+    compile 'com.facebook.android:account-kit-sdk:4.29.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
 
-    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.wdullaer:materialdatetimepicker:2.3.0'
 
-    compile 'com.google.firebase:firebase-messaging:+'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
+
+    compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
 }
