--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
         transitive = true;
     }
     testCompile 'junit:junit:4.12'
+    compile project(path: ':library')
 }
 
 apply plugin: 'com.google.gms.google-services'
