--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
             android:value="@string/ACCOUNT_KIT_CLIENT_TOKEN" />
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="2ebc480f86598adce4de3379e308106e42c6efb9"
-            />
+            android:value="2ebc480f86598adce4de3379e308106e42c6efb9" />
+
         <activity
             android:name="com.facebook.accountkit.ui.AccountKitActivity"
             android:theme="@style/AppLoginTheme"
@@ -96,7 +96,7 @@
         <activity
             android:name=".Activity.ClientLogin.ClientHomeScreen"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <!-- Firebase Notifications -->
         <service android:name=".Util.FCM.Service.BarristerFirebaseMessagingService">
@@ -104,13 +104,14 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
         <service android:name=".Util.FCM.Service.BarristerFireBaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
         <!-- ./Firebase Notifications -->
+        <activity android:name=".Activity.ShowNewsActivity" />
+        <activity android:name=".Activity.Update_Hearing"></activity>
     </application>
 
 </manifest>
