--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
         config {
             keyAlias 'Barrister'
             keyPassword 'android'
-            storeFile file('/Users/rahulbabanaraokalamkar/Desktop/Rahul\'Project/Mukesh Projects/Barrister.jks')
+            storeFile file('C:/Users/rahul.kalamkar/KeyStore/Barrister.jks')
             storePassword 'android'
         }
     }
